k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projetovarejo-api
  namespace: default
  labels:
    app: projetovarejo-api

spec:
  type: LoadBalancer

  selector:
    app: projetovarejo-api

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

  # Session affinity for sticky sessions (optional)
  sessionAffinity: None
